// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogListing should render correctly with props 1`] = `
<article
  className="blog-listing"
>
  <div
    className="header"
  >
    <div
      className="aspect-ratio-img"
    >
      <a
        href="/sdf"
      >
        <img
          alt=""
          height="300"
          src="https://via.placeholder.com/350x350"
        />
      </a>
    </div>
    <div
      className="category-text-container"
    >
      <a
        className="btn btn-primary"
        href="#"
      >
        Travel
      </a>
    </div>
  </div>
  <div
    className="content"
  >
    <h3
      className="post-title"
    >
      <a
        href="sdf"
      >
        Test title
      </a>
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, dolor facere fugit ipsam maxime sequi soluta. Accusamus atque ea eaque harum, id impedit itaque magni odit optio quod? Non, officia.
    </p>
    <a
      href="#"
    >
      Read more »
    </a>
  </div>
  <div
    className="metadata-container"
  >
    <div
      className="metadata"
    >
      Published by 
      <a
        href="#"
      >
        User
      </a>
       at 
      <a
        href=""
      >
        11/08/2018
      </a>
    </div>
  </div>
</article>
`;

exports[`BlogListing should render empty with no props 1`] = `
<article
  className="blog-listing"
>
  <div
    className="header"
  >
    <div
      className="aspect-ratio-img"
    >
      <a
        href="/sdf"
      >
        <img
          alt=""
          height="300"
          src="https://placeimg.com/500/250/any"
        />
      </a>
    </div>
    <div
      className="category-text-container"
    >
      <a
        className="btn btn-primary"
        href="#"
      >
        Travel
      </a>
    </div>
  </div>
  <div
    className="content"
  >
    <h3
      className="post-title"
    >
      <a
        href="sdf"
      >
        Post title
      </a>
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, dolor facere fugit ipsam maxime sequi soluta. Accusamus atque ea eaque harum, id impedit itaque magni odit optio quod? Non, officia.
    </p>
    <a
      href="#"
    >
      Read more »
    </a>
  </div>
  <div
    className="metadata-container"
  >
    <div
      className="metadata"
    >
      Published by 
      <a
        href="#"
      >
        User
      </a>
       at 
      <a
        href=""
      >
        11/08/2018
      </a>
    </div>
  </div>
</article>
`;
